--- a/4-InfraData/4-InfraData.csproj
+++ b/4-InfraData/4-InfraData.csproj
@@ -28,4 +28,8 @@
     <ProjectReference Include="..\3-Domain\3-Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\Images\" />
+  </ItemGroup>
+
 </Project>
