--- a/ConsultarAuth.API/ConsultarAuth.API.csproj
+++ b/ConsultarAuth.API/ConsultarAuth.API.csproj
@@ -11,6 +11,7 @@
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.14" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.14" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.14" />
+		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 
 		<!-- Outros pacotes -->
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
