--- a/ConsultarAuth.API/appsettings.json
+++ b/ConsultarAuth.API/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=ConsultarDB;Integrated Security=true;trustServerCertificate=true"
+    "DefaultConnection": "Server=localhost;Database=ConsultarDB;User Id=sa;Password=Consultar@2025;TrustServerCertificate=true"
   },
   "EmailSettings": {
     "Email": "Ti@ConsultarConsultoria.com.br",
