--- a/2 - Application/2-Application.csproj
+++ b/2 - Application/2-Application.csproj
@@ -8,6 +8,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="ClosedXML" Version="0.105.0" />
+    <PackageReference Include="CsvHelper" Version="33.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\3-Domain\3-Domain.csproj" />
     <ProjectReference Include="..\4-InfraData\4-InfraData.csproj" />
   </ItemGroup>
