--- a/ConsultarMRP.API/appsettings.Development.json
+++ b/ConsultarMRP.API/appsettings.Development.json
@@ -4,5 +4,13 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=ConsultarDB;Integrated Security=true;trustServerCertificate=true"
+  },
+  "EmailSettings": {
+    "Email": "Ti@ConsultarConsultoria.com.br",
+    "Password": "Consultar#2025"
   }
 }
