--- a/ConsultarMRP.API/appsettings.Production.json
+++ b/ConsultarMRP.API/appsettings.Production.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=ConsultarDB;Integrated Security=true;trustServerCertificate=true"
+    "DefaultConnection": "Server=tcp:consultarserver.database.windows.net,1433;Initial Catalog=ConsultarDB;Persist Security Info=False;User ID=TiConsultar;Password=Consultar#2025;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "EmailSettings": {
     "Email": "Ti@ConsultarConsultoria.com.br",
