--- a/ConsultarAuth.API/Properties/launchSettings.json
+++ b/ConsultarAuth.API/Properties/launchSettings.json
@@ -16,7 +16,7 @@
       "launchUrl": "swagger/index.html",
       "applicationUrl": "http://localhost:5044",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Production"
+        "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
     "https": {
@@ -26,7 +26,7 @@
       "launchUrl": "swagger/index.html",
       "applicationUrl": "https://localhost:7270",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Production"
+        "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
     "IIS Express": {
@@ -34,7 +34,7 @@
       "launchBrowser": true,
       "launchUrl": "swagger/index.html",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Production"
+        "ASPNETCORE_ENVIRONMENT": "Development"
       }
     }
   }
