--- a/ConsultarAuth.API/appsettings.Development.json
+++ b/ConsultarAuth.API/appsettings.Development.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=ConsultarDB;Integrated Security=true;trustServerCertificate=true"
+    "DefaultConnection": "Server=NB-BHN-7675\\MSSQLSERVER01;Database=ConsultarDB;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "EmailSettings": {
     "Email": "Ti@ConsultarConsultoria.com.br",
