--- a/ConsultarMRP.API/appsettings.Development.json
+++ b/ConsultarMRP.API/appsettings.Development.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=NB-BHN-7675\\MSSQLSERVER01;Database=ConsultarDB;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=ConsultarDB;Integrated Security=True;Persist Security Info=False;Pooling=False;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;"
   },
   "EmailSettings": {
     "Email": "Ti@ConsultarConsultoria.com.br",
